2021-12-11 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/toom3_sqr.c: Use a shorter mul when it's simple.
	* mpn/generic/toom4_sqr.c: Likewise.
	* mpn/generic/toom33_mul.c: Likewise.
	* mpn/generic/toom44_mul.c: Likewise.

	* gmp-h.in (GMP_ERROR_MPZ_OVERFLOW): New enum value.
	* errno.c (__gmp_overflow_in_mpz): New function.
	* gmp-impl.h (MPZ_OVERFLOW): New macro calling it.
	* mpz/init2.c: Use the new macro to rise the overflow error.
	* mpz/realloc.c: Likewise.
	* mpz/realloc2.c: Likewise.

	* mpz/tdiv_r.c: Special code for divisor with low zero limbs.
	* mpz/tdiv_qr.c: Likewise.

2021-11-02  Torbjörn Granlund  <tg@gmplib.org>

	* mpn/s390_64/sec_tabselect.asm: Rewrite.

	* mpn/generic/sec_tabselect.c: Provide alternative function.

2021-10-31  Torbjörn Granlund  <tg@gmplib.org>

	* mpn/riscv/64/sec_tabselect.asm: New file.
	* mpn/s390_64/sec_tabselect.asm: New file.
	* mpn/x86/sec_tabselect.asm: Streamline.

2021-10-31 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpz/fac_ui.c: Save half the products for small values.

2021-10-29  Torbjörn Granlund  <tg@gmplib.org>

	* mpn/generic/sec_tabselect.c: Rewrite.

2021-10-16  Torbjörn Granlund  <tg@gmplib.org>

	* configure.ac, config.guess, config.sub, acinclude.m4: Recognise more
	icelake CPUs, and initial alderlake CPUs.

	* mpn/powerpc64/mode64/p9/addaddmul_1msb0.asm: New file.

	* mpn/arm64/applem1/addaddmul_1msb0.asm: New file.

2021-10-10  Torbjörn Granlund  <tg@gmplib.org>

	* mpn/x86_64/k8/addaddmul_1msb0.asm: Moved from "..".

2021-10-08  Niels Möller  <nisse@lysator.liu.se>

	* tests/mpn/t-addaddmul.c: Unit test for mpn_addaddmul_1msb0.

2021-10-07  Niels Möller  <nisse@lysator.liu.se>

	* tune/speed.h (SPEED_ROUTINE_MPN_ADDADDMUL1_MSB0): New macro.
	* tune/common.c (speed_mpn_addaddmul_1msb0): New function.
	* tune/speed.c (routine): Add mpn_addaddmul_1msb0 to list.

2021-10-01 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* gen-sieve.c: New file to generate a small presieved array.